RESOLVED FIXED 125277
[CSS Shapes] Fix inset when only a subset of the arguments are defined
https://bugs.webkit.org/show_bug.cgi?id=125277
Summary [CSS Shapes] Fix inset when only a subset of the arguments are defined
Zoltan Horvath
Reported 2013-12-04 19:41:02 PST
I thought Length's default value is fixed 0, but actually it's auto-0. For the optional arguments of inset shape, we need to use fixed-0, so I updated the code and the tests to use that explicitly.
Attachments
Patch (3.61 KB, patch)
2013-12-04 19:46 PST, Zoltan Horvath
no flags
Zoltan Horvath
Comment 1 2013-12-04 19:46:33 PST
Dave Hyatt
Comment 2 2013-12-05 08:17:34 PST
Comment on attachment 218484 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-12-05 08:45:14 PST
Comment on attachment 218484 [details] Patch Clearing flags on attachment: 218484 Committed r160176: <http://trac.webkit.org/changeset/160176>
WebKit Commit Bot
Comment 4 2013-12-05 08:45:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.