[CSS Shapes] Fix inset when only a subset of the arguments are defined https://bugs.webkit.org/show_bug.cgi?id=125277

Reviewed by David Hyatt.

Source/WebCore:

       I thought Length's default value is fixed-0, but actually it's auto-0. For the optional arguments
       of inset shape, we need to use fixed-0, so I updated the code and the tests to use that explicitly.

No new tests, I updated the old ones.

* css/BasicShapeFunctions.cpp:
(WebCore::basicShapeForValue):

LayoutTests:

* fast/shapes/shape-outside-floats/shape-outside-floats-inset.html:


Canonical link: https://commits.webkit.org/143399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160176 268f45cc-cd09-0410-ab3c-d52691b4dbfc